--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,30 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Keep Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js";
+     import {auth} from "https://www.gstatic.com/firebasejs/9.2.0/firebase-auth.js";
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      const firebaseConfig = {
+        apiKey: "AIzaSyCApsZkStESj0EjwcjTnZy2HW5wUtSnrCg",
+        authDomain: "keep-clone-f2d44.firebaseapp.com",
+        projectId: "keep-clone-f2d44",
+        storageBucket: "keep-clone-f2d44.appspot.com",
+        messagingSenderId: "218596556874",
+        appId: "1:218596556874:web:1613b79c8965680ca9e6b3"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+
+    </script> -->
   </body>
 </html>
